working weather checking single page app

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
   </head>
   <body>
     <h1>Current Weather</h1>
-    <h3 id="loc"> Will anyone see my pasty arms today?  </h3>
     <div id="box">
-    <h5 id ="temp"> Temp:    </h5>
-    <h5 if = "cond"> Coniditons:  </h5>
+    <h4 id = "loc"> </h4>
+    <h3 id="sub"> Will anyone see my pasty arms today?  </h3>
+    <h4 id ="temp">    </h4>
+    <h4 id = "cond">  </h4>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
- <script  src="/index.js"></script>
+ <script = src="ajax.js"</script>
+  <script  src="/cold/index.js"></script>
   </body>
 </html>
