trying https fix

--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  <script = src="ajax.js"</script>
   <script  src="/cold/index.js"></script>
+  <script type="text/javascript">
+    if (window.location.protocol == "http:") {
+        var restOfUrl = window.location.href.substr(5);
+        window.location = "https:" + restOfUrl;
+    }
+</script>
   </body>
 </html>
