--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <h4 id = "cond">  </h4>
   </div>
  <script = src="gitter.js"</script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script  src="/cold/index.js"></script>
   </body>
   </html>
