--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <h4 id ="temp">    </h4>
     <h4 id = "cond">  </h4>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="jquery-1.11.1.js"></script>
 <script src="gitter.js"></script>
   </body>
 </html>
