--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pasty Arms?</title>
-
+    <script src="jquery-1.11.1.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
@@ -16,7 +16,6 @@
     <h4 id ="temp">    </h4>
     <h4 id = "cond">  </h4>
   </div>
-  <script type="text/javascript" src="jquery-1.11.1.js"></script>
 <script src="gitter.js"></script>
   </body>
 </html>
