--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,43 @@
     <h3 id="sub"> Will anyone see my pasty arms today?  </h3>
     <h4 id ="temp">    </h4>
     <h4 id = "cond">  </h4>
-  </div>
+    </div>
+  <p><button onclick="geoFindMe()">Show my location</button></p>
+  <div id="out"></div>
   <script
     src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
   </script>
-<script src="/gitter.js"></script>
+<script src="gitter.js"></script>
+<script>
+function geoFindMe() {
+  var output = document.getElementById("out");
+  if (!navigator.geolocation){
+    output.innerHTML = "<p>Geolocation is not supported by your browser</p>";
+    return;
+  }
+
+  function success(position) {
+    var latitude  = position.coords.latitude;
+    var longitude = position.coords.longitude;
+
+    output.innerHTML = '<p>Latitude is ' + latitude + '° <br>Longitude is ' + longitude + '°</p>';
+
+    var img = new Image();
+    img.src = "http://maps.googleapis.com/maps/api/staticmap?center=" + latitude + "," + longitude + "&zoom=13&size=300x300&sensor=false";
+
+    output.appendChild(img);
+  }
+
+  function error() {
+    output.innerHTML = "Unable to retrieve your location";
+  }
+
+  output.innerHTML = "<p>Locating…</p>";
+
+  navigator.geolocation.getCurrentPosition(success, error);
+}
+</script>
+
+
   </body>
-</html>
+  </html>
