--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,20 @@
   </head>
   <body>
     <h1>Current Weather</h1>
+    <p is="space"> </p>
     <div id="box">
     <h4 id = "loc"> </h4>
     <h3 id="sub"> Will anyone see my pasty arms today?  </h3>
     <h4 id ="temp">    </h4>
     <h4 id = "cond">  </h4>
+    <img id="icon" src="" height="42" width="42">
     </div>
   <p><button onclick="geoFindMe()">Show my location</button></p>
   <div id="out"></div>
-  <script
-    src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
-  </script>
+<script src= "https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src= "https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
 <script src="gitter.js"></script>
+<!-- I got this code off a google search I think from w3 schools -->
 <script>
 function geoFindMe() {
   var output = document.getElementById("out");
@@ -32,9 +34,6 @@ function geoFindMe() {
   function success(position) {
     var latitude  = position.coords.latitude;
     var longitude = position.coords.longitude;
-
-    output.innerHTML = '<p>Latitude is ' + latitude + '° <br>Longitude is ' + longitude + '°</p>';
-
     var img = new Image();
     img.src = "http://maps.googleapis.com/maps/api/staticmap?center=" + latitude + "," + longitude + "&zoom=13&size=300x300&sensor=false";
 
