--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>Current Weather</h1>
     <div id="box">
+      <h4 id="Date"> </h4>
     <h4 id = "loc"> </h4>
     <h3 id="sub"> Will anyone see my pasty arms today?  </h3>
     <h4 id ="temp">    </h4>
